--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -1,6 +1,11 @@
-<strong>My name is Brett Rabbiner!</strong>
-<p>My pronouns are he/him. I like to stay active, and find myself outside quite a bit, whether that means climbing, skiing, running, hiking, or some other outdoor activity. As far as Web is concerned, I am hoping to both become a better programmer, as well as to learn how to build websites.</p>
-<em>Thanks!</em>
+<html>
+    <head></head>
+    <body>
+        <strong>My name is Brett Rabbiner!</strong>
+        <p>My pronouns are he/him. I like to stay active, and find myself outside quite a bit, whether that means climbing, skiing, running, hiking, or some other outdoor activity. As far as Web is concerned, I am hoping to both become a better programmer, as well as to learn how to build websites.</p>
+        <em>Thanks for stopping by!</em>
 
-<p> <a href="../img/hiking.jpeg">Picture of me hiking</a> </p>
-<p> <a href="https://youtu.be/PNs68O5JSKg?si=sEP5DlV9YnPGotYq">The great Chris Benchetler</a> </p>
+        <p> <a href="../img/hiking.jpeg">Picture of me hiking</a> </p>
+        <p> <a href="https://youtu.be/PNs68O5JSKg?si=sEP5DlV9YnPGotYq">The great Chris Benchetler</a> </p>
+    </body>
+</html>
