--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -14,7 +14,7 @@
         <p>Ski touring combines elements of Nordic and alpine skiing and embraces such sub-disciplines as Telemark and randonnée. A defining characteristic is that the skier's heels are "free" – i.e. not bound to the skis – in order to allow a natural gliding motion while traversing and ascending terrain which may range from perfectly flat to extremely steep.</p>
         
         <p>Ski touring has been adopted by skiers seeking new snow, by alpinists, and by those wishing to avoid the high costs of traditional alpine skiing at resorts. Touring requires independent navigation skills and may involve route-finding through potential avalanche terrain. It has parallels with hiking and wilderness backpacking. Ski mountaineering is a form of ski touring which variously combines the sports of Telemark, alpine, and backcountry skiing with that of mountaineering.</p>
-        <img src="../img/touring.jpg">
+        <img src="../img/touring.jpg" alt = "Two people touring up a mountain">
     </header>
     <section>
         <h2>Table of Contents</h2>
@@ -28,20 +28,20 @@
         </nav>
     </section>
     
-<main>
     <h2 id = "history"> History</h2>
     <p>Among the pioneers of ski touring is John "Snowshoe" Thompson, perhaps the earliest modern ski mountaineer and a prolific traveler who used skis to deliver the mail at least twice a month over the steep eastern scarp of the Sierra Nevada to remote California mining camps and settlements. His deliveries began in 1855 and continued for at least 20 years.[2] Thompson's route of 90 miles (140 km) took three days in and 48 hours back out with a pack that eventually exceeded 100 pounds (45 kg) of mail.</p>
     <p>Cecil Slingsby, one of the earliest European practitioners, crossed the 1,550-metre-high (5,090 ft) Keiser Pass in Norway on skis in 1880. Other pioneers include Adolfo Kind, Arnold Lunn, Ottorino Mezzalama, Patrick Vallençant, and Kilian Jornet Burgada.</p>
-    <img src="../img/touring2.jpg">
+    <img src="../img/touring2.jpg" alt = "Mountain that has been toured on">
     <h2 id = "terminology"> Terminology</h2>
-    <p>Ski touring involves both uphill and downhill travel without needing to remove skis. Various terms have emerged to refer to how the terrain is accessed and how close it is to services.
+    <p>
+        Ski touring involves both uphill and downhill travel without needing to remove skis. Various terms have emerged to refer to how the terrain is accessed and how close it is to services.
 
         <dd><li>Frontcountry refers to terrain that is off-trail but within ski area boundaries where ski lifts and emergency services are close at hand.</li>
         <li>Slackcountry refers to terrain that is outside of marked ski area boundaries and accessed from a lift without having to use skins or bootpack. Usually this also includes terrain with access back to the lift as well. For purists, slackcountry touring may also include touring where people use a car as a shuttle.</li>
         <li>Sidecountry refers to terrain that is outside of ski area boundaries yet still accessible via a ski lift. Typically sidecountry requires the skier to hike, skin, or climb within ski area boundaries to reach or return from the sidecountry area, or both.</li>
         <li>Backcountry refers to terrain in remote areas that is outside of ski area boundaries and not accessible via a ski lift.</li></dd>
     </p>
-    <img src="../img/touring3.jpg">
+    <img src="../img/touring3.jpg" alt = "Man skiing">
     <h2 id = "equipment"> Equipment</h2>
     <h3><strong>Styles of Equipment</strong></h3>
     <dd>
@@ -52,7 +52,7 @@
     </dd>
     <h3>Ascending Aids</h3>
     <p>Various devices can be used to make ascending easier. "Fish scale" pattern friction aids embossed in the center section of the bottoms of the skis or sticky ski wax in the center pocket are used in lower-angle or rolling terrain. Climbing skins are used when fish scales or ski wax fail to provide sufficient grip for skiing steeply uphill. Ski crampons may be attached when conditions are particularly icy or the grade too steep for skins.</p>
-    <img src="../img/touring4.jpg">    
+    <img src="../img/touring4.jpg" alt = "Old-school touring boot and binging">    
 
     <h3 id = "seemore">See More</h3>
    <dd> 
@@ -66,6 +66,5 @@
         <li> <a href="https://en.wikipedia.org/wiki/Ski_touring">Ski Touring</a></li>
     </dd>
 
-</main>
 </body>
 </html>
