--- a/html-midterm/html-midterm.html
+++ b/html-midterm/html-midterm.html
@@ -56,7 +56,7 @@
 
     <a href="#">Link without closing tag</a>
 
-    <p><em>Underlined text</em></p>
+    <p><u>Underlined text</u></p>
 
     <dl>
         <dt>Descriptive Item Title</dt>
