--- a/wa/wa6/wa6.html
+++ b/wa/wa6/wa6.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="score">
-            <h2>NFL<br> Sunday Night Football <br> LIVE</h2>
+            <h2>NFL<br> Sunday Night Football <br> Eagles vs Cowgirls <br> LIVE</h2>
         </div>
     </article>
     
