--- a/css-midterm/css_midterm.html
+++ b/css-midterm/css_midterm.html
@@ -9,10 +9,9 @@
 <body>
     <div>
         <div id="head">
-        <h1><u>Colorado Symphony</u> <p>Celebrate 100 Years at the Centenial Gala!</p></h1>
-        <h2><p>Welcome to our 2023/24 Classics Season! This season carries special significance as weʼll celebrate our Centennial, a milestone we could not have reached without the overwhelming and longstanding support
-            of this community. We are your symphony, and this celebration belongs as much to you and our state as it does to our orchestra.</p>
-            <p>Our Centennial promises to offer a breathtaking odyssey through some of the finest music ever composed, and we canʼt wait to share it with all of you. Join us as we celebrate 100 years of music and look ahead to a bright future of music making in Colorado for generations to come.</p>
+        <h1><u>Colorado Symphony</u> <p>Classics in 2022-2023!</p></h1>
+        <h2><p>Our 2022/23 Season promises to be an imaginative and spectacular journey through some of the best music ever composed.</p>
+            <p>We’re delighted to present to you a season brimming with extraordinary talent and exciting repertoire that we hope will ignite your imagination. The Colorado Symphony is committed to bringing the best in live, symphonic music to an eclectic and ever-growing audience, and we’re well positioned to embark on an exciting path forward in the years to come.</p>
         </h2>
     </div>
     <div>
@@ -21,29 +20,29 @@
             <h2 id="b2">RESERVE YOUR SEAT<p>Check out our exclusive rates</p></h2>
             <h2 id="b3">OTHER RELATED EVENTS<P>Preview more shows now</P></h2>
     </div>
+    
+    <div id="main">
     <div>
-        <div id="main">
-        <h2 id="no1"><strong>Beethoven's Fifth Symphony with Peter Oundjian</strong> <p>SEP15-17 [FRI-SAT 7:30 SUN1:00]</p> </h2>
-        <h2 id="no2"><strong>Beethoven Piano Concerto No. 4 with Jeffrey Kahane </strong> <p>SEP29-OCT1 [FRI-SAT7:30 SUN1:00]</p> </h2>
-        <h2 id="no3"><strong>Shostakovich Symphony No. 5</strong> <p>OCT 13-15 [FRI-SAT 7:30 SUN1:00]</p></h2>
-        <h2 id="no4"><strong>Tchaikovsky Symphony No. 6 with Peter Oundjian</strong> <p>NOV3-5 [FRI-SAT 7:30 SUN1:00]</p></h2>
-        <h2 id="no5"><strong>Wolfe & Dragon feat. Chorus, Schumann, and more</strong> <p>NOV 17-19 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no6"><strong>Two Titans: Mozart & Mahler</strong> <p>DEC 1-3 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no7"><strong>Litton Conducts featuring the New York City Ballet</strong> <p>JAN 12-14 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no8"><strong>Beethoven Piano Concerto No. 2</strong> <p>FEB 9-11 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no9"><strong>Beethoven's Ninth Symphony with Marin Alsop</strong> <p>FEB 23-25 [FRI-SAT 7:30 SUN1:00]</p></h2>
-        <h2 id="no0"><strong>Stravinsky's The Firebird with Christopher Dragon</strong> <p> MAR 8-10 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no11"><strong>Mozart's Requiem with Peter Oundjian</strong> <p>MAR 22-24 [FRI-SA T7:30 SUN1:00]</p></h2>
-        <h2 id="no12"><strong>Mahler's Symphony No. 3 with Peter Oundjian</strong> <p>Apr 12-14 [Fri-Sat 7:30 Sun 1:00]</p></h2>
-        <h2 id="no13"><strong>Rachmaninoff Piano Concerto No. 3</strong> <p>APR 26-28 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no14"><strong>Brahms Symphony No. 3</strong> <p>MAY 10-12 [FRI-SAT 7:30 SUN 1:00]</p></h2>
-        <h2 id="no15"><strong>An Alpine Symphony with Peter Oundjian</strong> <p>MAY 24-26 [FRI-SAT 7:30 SUN 1:00]</p></h2>
+        <div id="else">
+        <h2 id="no1"><strong>Vivaldi's The Four Seasons</strong> <p>OCT14-16 FRI-SAT 7:30 SUN 1:00 </p> </h2>
+        <h2 id="no2"><strong>Beethoven Symphony No. 3 with Peter Oundjian</strong> <p>NOV 4-6 FRI-SAT 7:30 SUN 1:00</p> </h2>
+        <h2 id="no3"><strong>Tchaikovsky Piano Concerto No. 1 with Olga Kern</strong> <p>DEC 2-4 FRI-SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no4"><strong>Ravel’s Daphnis et Chloé</strong> <p>JAN13-15 FRI-SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no5"><strong>Beethoven Symphony No. 8</strong> <p>FEB 10-12 FRI-SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no6"><strong>Beethoven’s Emperor Concerto</strong> <p>February 24-26 FRI-SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no7"><strong>Bartók Concerto for Orchestra</strong> <p>March 10th-12th FRI-SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no8"><strong>Brahms Requiem with Peter Oundjian</strong> <p>Mar 24–26 FRI–SAT 7:30 SUN 1:00</p></h2>
+        <h2 id="no9"><strong>Beethoven Violin Concerto</strong> <p>Apr 21-23 Fri & Sat 7:30 Sunday 1:00</p></h2>
+        </div>
     </div>
+    </div>
+    
     <div>
         <div id="others">
-            <h2 id="no16"> We hope you enjoy the wonderful Colorado Symphony!</h2>
+        <h2 id="no16"> We hope you enjoy the wonderful Colorado Symphony!</h2>
         <h2 id="no17"><li> Telephone: 011-222-3334</li> <li>Email: brra1810@colorado.edu</li> <li>GitHub: SbbarB</li></h2>
         <h2 id="moon"></h2>
     </div>
+
 </body>
 </html>
