--- a/portfolio5.0/index.html
+++ b/portfolio5.0/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self'; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://o365coloradoedu-my.sharepoint.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self'; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https://o365coloradoedu-my.sharepoint.com;">
     <title>Record Player Exploded Anatomy</title>
 
     <!-- Fonts -->
@@ -22,6 +22,7 @@
     <div id="controls" style="display: none;">
         <button id="projectButton">The Collection</button>
         <button id="explodeButton">Explode Anatomy</button>
+        <button id="infoButton">Information</button>
     </div>
 
     <!-- Labels container for 3D annotations -->
@@ -44,8 +45,42 @@
         </div>
     </div>
 
-    <!-- Reopen bio button -->
-    <button id="reopen-bio">Bio</button>
+    <!-- Info overlay -->
+    <div id="info-overlay" style="display: none;">
+        <div id="info-container">
+            <button id="close-info">×</button>
+            <div id="info-content">
+                <h1>Brett Rabbiner</h1>
+                <div class="info-section">
+                    <h2>Resume</h2>
+                    <a href="Resume (1).pdf" target="_blank" class="info-link">
+                        📄 View Resume
+                    </a>
+                </div>
+                <div class="info-section">
+                    <h2>Contact</h2>
+                    <div class="contact-item">
+                        <a href="mailto:brabbs1@icloud.com" class="info-link">📩 brabbs1@icloud.com</a>
+                    </div>
+                </div>
+                <div class="info-section">
+                    <h2>LinkedIn</h2>
+                    <a href="https://www.linkedin.com/in/brett-rabbiner-9020482a5" target="_blank" class="info-link">
+                        🔗 Connect on LinkedIn
+                    </a>
+                </div>
+                <div class="info-section">
+                    <h2>GitHub</h2>
+                    <a href="https://github.com/SbbarB/SbbarB.github.io/tree/main" target="_blank" class="info-link">
+                        🔗 View Repository
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Noise button (shown with simple bio) -->
+    <button id="noise-button" style="display: none;">Noise</button>
 
     <!-- Name background (main center) -->
     <div class="name-box">
@@ -116,6 +151,13 @@
             </div>
             <div class="bio-text"></div>
         </div>
+    </div>
+
+    <!-- Simple bio text (shown when muted) -->
+    <div id="simple-bio" style="display: none;">
+        <h1>Brett Rabbiner</h1>
+        <p class="bio-paragraph"></p>
+        <img id="mute-photo" src="muteImage.png" alt="Brett Rabbiner">
     </div>
 
     <!-- ViewCube Navigation -->
