--- a/portfolio5.0/index.html
+++ b/portfolio5.0/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://o365coloradoedu-my.sharepoint.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self'; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https://o365coloradoedu-my.sharepoint.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://o365coloradoedu-my.sharepoint.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.honey.io; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://cdn.honey.io; connect-src 'self' https://cdn.jsdelivr.net; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https://o365coloradoedu-my.sharepoint.com;">
     <title>Record Player Exploded Anatomy</title>
 
     <!-- Fonts -->
@@ -52,12 +52,6 @@
             <div id="info-content">
                 <h1>Brett Rabbiner</h1>
                 <div class="info-section">
-                    <h2>Resume</h2>
-                    <a href="Resume (1).pdf" target="_blank" class="info-link">
-                        📄 View Resume
-                    </a>
-                </div>
-                <div class="info-section">
                     <h2>Contact</h2>
                     <div class="contact-item">
                         <a href="mailto:brabbs1@icloud.com" class="info-link">📩 brabbs1@icloud.com</a>
@@ -81,66 +75,6 @@
 
     <!-- Noise button (shown with simple bio) -->
     <button id="noise-button" style="display: none;">Noise</button>
-
-    <!-- Name background (main center) -->
-    <div class="name-box">
-        <div class="name-inner name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="name-inner name-center">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-
-    <!-- Background name panels -->
-    <div class="bg-name-box bg-name-box-1">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-    <div class="bg-name-box bg-name-box-2">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-    <div class="bg-name-box bg-name-box-4">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-    <div class="bg-name-box bg-name-box-6">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-    <div class="bg-name-box bg-name-box-7">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
-    <div class="bg-name-box bg-name-box-8">
-        <div class="bg-name-inner bg-name-left">
-            <span>Brett Rabbiner</span>
-        </div>
-        <div class="bg-name-inner bg-name-right">
-            <span>Brett Rabbiner</span>
-        </div>
-    </div>
 
     <!-- Bio card -->
     <div id="bio-card">
