--- a/portfolio5.0/index.html
+++ b/portfolio5.0/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://o365coloradoedu-my.sharepoint.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.honey.io; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://cdn.honey.io; connect-src 'self' https://cdn.jsdelivr.net; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https://o365coloradoedu-my.sharepoint.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://o365coloradoedu-my.sharepoint.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.honey.io; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://cdn.honey.io; connect-src 'self' https://cdn.jsdelivr.net; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https://o365coloradoedu-my.sharepoint.com https://app.criticalmention.com;">
     <title>Record Player Exploded Anatomy</title>
 
     <!-- Fonts -->
